# intentdiff

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md
intentdiff-cli/: Cargo.toml
intentdiff-cli/src/: cli.rs  main.rs
intentdiff-core/: Cargo.toml
intentdiff-core/src/: lib.rs
intentdiff-core/src/diff/: mod.rs
intentdiff-core/src/engine/: mod.rs
intentdiff-core/src/semantic/: mod.rs  profile.rs  rule.rs  rule_id.rs  signal.rs
intentdiff-core/src/semantic/rules/: mod.rs  persistence.rs  transport.rs
intentdiff-core/src/snapshot/: mod.rs
