[package]
name = "intentdiff-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Intent evaluation engine"

[dependencies]
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true


[dev-dependencies]
pretty_assertions = "1.3.0"
insta = "1.29.0"
